name: hackage-map
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: PublicDomain
maintainer: guaraqe@openmailbox.org
synopsis: Synopsis
author: guaraqe

executable hackage-map
    main-is: Main.hs
    build-depends:
        base >=4.9 && <4.10,
        Cabal,
        directory-tree,
        filepath,
        fgl,
        graphviz,
        hashable,
        text
    default-language: Haskell2010
    ghc-options: -O2 -threaded
    hs-source-dirs: app

